<resources>
    <string name="app_name">Streakr</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_user_feed">User Feed</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to home page -->
    <string name="create_solo_streak">Create Solo Streak</string>
    <string name="solo_streaks">Solo Streaks</string>
    <string name="create_group_streak"> Create Group Streak</string>
    <string name="group_streaks">Group Streaks</string>
    <string name="add_a_friend">Add friend</string>
    <string name="view_profile">View profile</string>
    <string name="manage_streaks">Manage Streaks</string>
    <string name="shared_preferences_api_key">Shared Prefences API Keys</string>
    <string name="json_web_token">Json Web Token</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_create__solo_streak">Create Solo Streak</string>
    <!-- Create a streak -->
    <string name="streak_name">Streak name</string>
    <string name="streak_description">Streak description</string>
    <string name="success_criteria"> Success criteria</string>
    <string name="who_is_involved">Who is involved?</string>
    <string name="just_me">Just Me</string>
    <string name="friends"> Friends </string>
    <string name="create_streak">Create Streak</string>
    <!-- Solo Streak Created -->
    <string name="solo_streak_created_headline"> You created a solo streak! </string>
    <string name="solo_streak_details">Solo Streak Details </string>
    <string name="solo_streak_name"> Solo Streak Name</string>
    <string name="solo_streak_description"> Solo Streak Description </string>
    <!-- Friend Streak Reward or Forfeit -->
    <string name="do_you_want_to_set_a_reward"> Do you want to set a reward for the winner of the streak? </string>
    <!-- Solo Forfeit -->
    <string name="solo_streak_forfeit_headline"> Do you want to set a forfeit for yourself? </string>
    <string name="solo_streak_reward_headline"> Do you want to set a reward for yourself? </string>
    <!-- Button related strings -->
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="title_activity_streak_reward">StreakRewardActivity</string>
    <string name="title_activity_solo_streak_reward">SoloStreakRewardActivity</string>
    <string name="title_activity_streak_end_date">StreakEndDateActivity</string>
    <string name="title_activity_friend_streak_reward_or_forfeit">
        FriendStreakRewardOrForfeitActivity
    </string>
    <string name="title_activity_friend_streak_reward">FriendStreakRewardActivity</string>
    <string name="title_activity_friend_streak_forfeit">FriendStreakForfeitActivity</string>
    <string name="title_activity_solo_forfeit">SoloForfeitActivity</string>
    <string name="title_activity_solo_reward">SoloRewardActivity</string>
    <string name="solo_forfeit_description">Solo forfeit description</string>
    <string name="solo_reward_description">Solo reward description</string>
    <string name="title_activity_streak_created">StreakCreatedActivity</string>
    <string name="title_activity_solo_streak_created">Solo Streak Created</string>
    <string name="title_activity_create_group_streak">Create Group Streak</string>
    <string name="title_activity_manage_streaks">Manage Streaks</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="title_activity_select_friends_for_group_streak">
        SelectFriendsForGroupStreakActivity
    </string>
    <string name="title_activity_group_streak_created">GroupStreakCreatedActivity</string>
    <string name="title_activity_friends">Friends </string>
    <string name="title_activity_get_users">GetUsersActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_solo_streaks">SoloStreaksActivity</string>
    <string name="title_activity_group_streaks">GroupStreaks</string>


</resources>
